[gd_scene load_steps=6 format=3 uid="uid://bpqo103lmn4jo"]

[ext_resource type="Script" path="res://instances/item/item.gd" id="1_dbqc8"]
[ext_resource type="PackedScene" uid="uid://cfx3wanmlsj0" path="res://components/interactable_area/interactable_area.tscn" id="1_era5a"]
[ext_resource type="PackedScene" uid="uid://cemmf570s8hey" path="res://components/dialogue_emitter/dialogue_emitter.tscn" id="2_g8rpo"]
[ext_resource type="Texture2D" uid="uid://b03fer3ti2iyc" path="res://icon.svg" id="2_hk1fy"]
[ext_resource type="Resource" uid="uid://8ctajnr773an" path="res://demo_scene/test_dialogue.dialogue" id="4_ghskw"]

[node name="Item" type="Node2D"]
script = ExtResource("1_dbqc8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3.8147e-06, 3.8147e-06)
scale = Vector2(0.109375, 0.109375)
texture = ExtResource("2_hk1fy")

[node name="InteractableArea" parent="." instance=ExtResource("1_era5a")]

[node name="DialogueEmitter" parent="." instance=ExtResource("2_g8rpo")]
dialogue_resource = ExtResource("4_ghskw")

[connection signal="signal_dialogue" from="." to="DialogueEmitter" method="show_dialogue"]
[connection signal="player_interacted" from="InteractableArea" to="." method="on_player_interacted"]
